--- a/web/modules/custom/js_message/css/popup_get_message.css
+++ b/web/modules/custom/js_message/css/popup_get_message.css
@@ -88,7 +88,7 @@
 .modal-body {
     width: auto;
     min-height: 18px;
-    /*height: 500px;*/
+    max-height: 400px;
     position: relative;
     border: 0;
     padding: .5em 1em;
